--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="CarCrafter AI - Predict car prices using machine learning"
+      content="Car Price Predictor - Predict car prices using machine learning"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CarCrafter AI - Advanced Market Intelligence</title>
+    <title>Car Price Predictor - Advanced Market Intelligence</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
